# MMG

./: CMakeLists.txt  README.md  catch.cpp
multi_dimensional/: md_map_generator.h
one_dimensional/: 1d_map_generator.h
test/: test_.cpp
three_dimensional/: 3d_map_generator.h
two_dimensional/: 2d_map_generator.h
